--- a/zeppelin-web/src/app/home/home.html
+++ b/zeppelin-web/src/app/home/home.html
@@ -37,11 +37,11 @@ limitations under the License.
     </div>
     <div style="margin-top: -380px;">
       <h1 class="box-heading" id="welcome">
-        Welcome to Zeppelin!
+        欢迎使用 GrowingIO 数据探索平台
       </h1>
-      Zeppelin is web-based notebook that enables interactive data analytics.<br>
-      You can make beautiful data-driven, interactive, collaborative document with SQL, code and even more!<br>
-
+      HQL语法手册: <a href="https://cwiki.apache.org/confluence/display/Hive/LanguageManual">查看</a> <br>
+      Spark手册 : <a href="http://spark.apache.org/docs/1.5.1">查看</a> <br>
+      Phoenix手册 : <a href="http://phoenix.apache.org/language/index.html">查看</a> <br>
       <div class="row">
         <div class="col-md-4" ng-if="ticket">
           <h4>Notebook
