--- a/zeppelin-web/src/components/navbar/navbar.html
+++ b/zeppelin-web/src/components/navbar/navbar.html
@@ -19,7 +19,7 @@ limitations under the License.
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="#/">
-        <img style="margin-top: -7px;" src="assets/images/zepLogoW.png" width="50" alt="I'm zeppelin"> Zeppelin
+        <img style="margin-top: -7px;" src="assets/images/giologo.png" width="50" alt="I'm zeppelin">
       </a>
     </div>
 
@@ -95,7 +95,7 @@ limitations under the License.
         </li>
         <li class="nav-component" ng-if="!ticket">
           <button class="btn nav-login-btn" data-toggle="modal" data-target="#loginModal"
-                  ng-click="showLoginWindow()">Login
+                  ng-click="showLoginWindow()">登录
           </button>
         </li>
       </ul>
