--- a/zeppelin-web/src/components/navbar/navbar.html
+++ b/zeppelin-web/src/components/navbar/navbar.html
@@ -19,7 +19,7 @@ limitations under the License.
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="#/">
-        <img style="margin-top: -7px;" src="assets/images/giologo.png" width="50" alt="I'm zeppelin">
+        <img style="margin-top: -7px;" src="assets/images/giologoW.png" width="150" alt="I'm zeppelin">
       </a>
     </div>
 
