update GIO-Zeppelin to 0.8

--- a/zeppelin-web/src/components/navbar/navbar.html
+++ b/zeppelin-web/src/components/navbar/navbar.html
@@ -21,10 +21,7 @@ limitations under the License.
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand navbar-logo" href="#/">
-        <img style="margin-top: -7px;" src="assets/images/zepLogoW.png" width="50" alt="Zeppelin" />
-      </a>
-      <a class="navbar-brand navbar-title" href="#/">
-        <span>Zeppelin</span>
+        <img style="margin-top: -7px;" src="assets/images/giologoW.png"  width="100"  alt="GrowingIO" />
       </a>
     </div>
 
@@ -109,7 +106,7 @@ limitations under the License.
         </li>
         <li class="nav-component" ng-if="!ticket">
           <button class="btn nav-login-btn" data-toggle="modal" data-target="#loginModal"
-                  ng-click="navbar.showLoginWindow()">Login
+                  ng-click="navbar.showLoginWindow()">登录
           </button>
         </li>
       </ul>
@@ -130,10 +127,10 @@ limitations under the License.
       <!-- about dialog body -->
       <div class="modal-body modal-body-about">
           <div class="hidden-xs col-sm-4 logo">
-            <img src="assets/images/zepLogo.png" alt="Apache Zeppelin" title="Apache Zeppelin" />
+            <img src="assets/images/giologo.png" alt="GrowingIO Zeppelin" title="GrowingIO Zeppelin" />
           </div>
           <div class="col-xs-12 col-sm-8 content">
-            <h3>Apache Zeppelin</h3>
+            <h3>GrowingIO Zeppelin</h3>
             <br/>
             <span id="i18n-14">Version</span>
             <span class="modal-body-about-version"> {{zeppelinVersion}} </span>
