--- a/zeppelin-web/src/app/home/home.html
+++ b/zeppelin-web/src/app/home/home.html
@@ -13,16 +13,14 @@ limitations under the License.
 -->
 <div ng-controller="HomeCtrl as home" data-ng-init="initHome()">
   <div ng-show="home.staticHome" class="box width-full home">
+
     <div class="zeppelin">
       <div class="zeppelin2"></div>
     </div>
     <div style="margin-top: -380px;">
       <h1 class="box-heading" id="welcome">
-        Welcome to Zeppelin!
+        欢迎使用 GrowingIO 数据探索平台
       </h1>
-      Zeppelin is web-based notebook that enables interactive data analytics.<br/>
-      You can make beautiful data-driven, interactive, collaborative document with SQL, code and even more!<br/>
-
       <div class="row">
         <div class="col-md-4" ng-if="ticket">
           <h4>Notebook
@@ -56,11 +54,13 @@ limitations under the License.
           </div>
         </div>
         <div class="col-md-6">
-          <h4>Help</h4>
-          Get started with <a style="text-decoration: none;" target="_blank"
-                              href="http://zeppelin.apache.org/docs/{{zeppelinVersion}}/index.html">Zeppelin documentation</a><br/>
+          <h4>帮助</h4>
+          HQL语法手册: <a style="text-decoration: none;" target="_blank" href="https://cwiki.apache.org/confluence/display/Hive/LanguageManual">查看</a> <br/>
+          Spark手册 : <a style="text-decoration: none;" target="_blank" href="http://spark.apache.org/docs/2.3.1/">查看</a> <br/>
+          Phoenix手册 : <a style="text-decoration: none;" target="_blank" href="http://phoenix.apache.org/language/index.html">查看</a> <br/>
+          Zeppelin文档: <a style="text-decoration: none;" target="_blank" href="https://zeppelin.apache.org/docs/0.8.0/quickstart/tutorial.html">查看</a><br/>
+          <h4>开源社区</h4>
 
-          <h4>Community</h4>
           Please feel free to help us to improve Zeppelin, <br/>
           Any contribution are welcome!<br/><br/>
           <a style="text-decoration: none;" href="http://zeppelin.apache.org/community.html"
